After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 743661 - g_win32_check_windows_version() is missing from doc
g_win32_check_windows_version() is missing from doc
Status: RESOLVED FIXED
Product: glib
Classification: Platform
Component: docs
unspecified
Other Linux
: Normal normal
: ---
Assigned To: gtkdev
gtkdev
Depends on:
Blocks:
 
 
Reported: 2015-01-28 17:30 UTC by Xavier Claessens
Modified: 2015-03-13 11:47 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
Win32: Move g_win32_check_windows_version() to the correct place in header (2.73 KB, patch)
2015-01-28 17:30 UTC, Xavier Claessens
reviewed Details | Review
Win32: Move g_win32_check_windows_version() to the correct place in header (1.60 KB, patch)
2015-02-11 16:15 UTC, Xavier Claessens
none Details | Review

Description Xavier Claessens 2015-01-28 17:30:18 UTC
patch comming.
Comment 1 Xavier Claessens 2015-01-28 17:30:38 UTC
Created attachment 295685 [details] [review]
Win32: Move g_win32_check_windows_version() to the correct place in header

It was added after G_END_DECLS, outside the #ifdef G_PLATFORM_WIN32,
and inside a #ifndef __GTK_DOC_IGNORE__ block. So it was missing from
the doc.
Comment 2 Xavier Claessens 2015-01-28 17:33:10 UTC
Note: the diff seems unrelated, please check the win32.h file after applying.
Comment 3 Allison Karlitskaya (desrt) 2015-02-05 14:18:52 UTC
Review of attachment 295685 [details] [review]:

Why did you avoid moving all of that other stuff inside of G_END_DECLS (and ifdef G_PLATFORM_WIN32) as well?
Comment 4 Xavier Claessens 2015-02-05 16:10:47 UTC
Was unsure if it was there for a reason or not, since it has been like that for a long time. I've no idea what's correct for windows headers tbh. I let you decide :D
Comment 5 Fan, Chun-wei 2015-02-06 11:23:20 UTC
Hi Xavier,

Yeah, I did have the new function prototype and the enum that it uses in the __GTK_DOC_IGNORE__ block by accident, as you pointed.  It's my fault, really :).

Hello Ryan,

I think the patch that Xavier had was the intended effect of the code I added in there, so I think it's right after applying the patch, although it does seems unrelated.

With blessings, thank you!
Comment 6 Allison Karlitskaya (desrt) 2015-02-06 11:24:21 UTC
(In reply to comment #5)
> Hi Xavier,
> 
> Yeah, I did have the new function prototype and the enum that it uses in the
> __GTK_DOC_IGNORE__ block by accident, as you pointed.  It's my fault, really
> :).
> 

So should we move the other code into the main part of the header as well?
Comment 7 Fan, Chun-wei 2015-02-06 11:40:38 UTC
Hello Xavier,

(In reply to comment #6)
> So should we move the other code into the main part of the header as well?

Did you mean the parts like #define g_win32_get_package_installation_directory g_win32_get_package_installation_directory_utf8?  I think we could just keep that in a #ifndef __GTK_DOC_IGNORE__ block, but move the items there before G_END_DECLS.  It looks like an oversight from bug 688109.

With blessings!
Comment 8 Xavier Claessens 2015-02-11 16:15:51 UTC
Created attachment 296613 [details] [review]
Win32: Move g_win32_check_windows_version() to the correct place in header

It was added after G_END_DECLS, outside the #ifdef G_PLATFORM_WIN32,
and inside a #ifndef __GTK_DOC_IGNORE__ block. So it was missing from
the doc.